Fixed overflow issue

--- a/styles/media-queries.css
+++ b/styles/media-queries.css
@@ -117,7 +117,6 @@
         transform: translate(-50%, -50%); /* This centers the video */
         
         height: 100%; /* This makes the video stretch to the full height of its parent */
-        width: auto; /* This ensures the video maintains its aspect ratio */
         
         filter: blur(2.5rem); /* This applies the blur effect */
         object-fit: cover; /* This ensures the video covers the full height and width of its container */
